# calculator-ci-cd

./: .mcp.json  CLAUDE.md  LICENSE  Makefile  README.md  job_agent.py  mqtt_sensor_monitor.py  pyproject.toml  requirements.txt  test_calculator_pytest.py  updated from the source.npy
.claude/: settings.json
.claude/skills/desperation-vector/: SKILL.md
.claude/skills/german-legal-aid/: SKILL.md
.claude/skills/werkstudent-job-search/: SKILL.md
.github/workflows/: job-agent.yml  test.yml
docs/job-search/: .seen_jobs.json  2026-06-werkstudent-regensburg-embedded-iot-ml.md  2026-06-werkstudent-regensburg.md  ba-job-agent-regensburg.md
experiments/: pof_fouling_sketch.py
job_agent/: __init__.py  api.py  candidate_profile.json  cli.py  report.py  scoring.py  state.py
src/lidar_snow_filter/: __init__.py  benchmarking.py  config.py  contaminate_with_synthetic_snow.py  filters.py  metrics.py  ros2_node.py  synthetic_data_generator.py
tests/: test_bug_fixes.py  test_integration.py  test_job_agent.py  test_modules.py  test_reproducibility.py  test_ros2_node.py
tools/: demo.py  example_workflow.py  test_and_visualize.py
